# SpotMap

./: .gitignore  README.md
configs/: run_openmask3d_spotmap.sh  spot.json
docs/: README.md  contact.html  homepage.html  index.html  scripts.js  styles.css  usage.md
notebooks/: denoising_demo.ipynb
src/data_acquisition/: README.md  environment.yml  image_processing.py  main.py  rosbag_processing.py
src/data_acquisition/ros2/spot_image_sync/: CMakeLists.txt  package.xml
src/data_acquisition/ros2/spot_image_sync/src/: rgbd_pipeline_node.cpp  rgbd_sync.cpp
src/mapping_and_reconstruction/: README.md  environment.yml  run.sh  tsdf_reconstruction.py
src/mapping_and_reconstruction/ply_processing/: cluster_filtering.py  create_mesh.py  mesh_processing.py  mesh_viz.py  normal_estimation.py  pc_denoising.py  radius_filtering.py  statistical_filtering.py  visualization_utils.py
src/mapping_and_reconstruction/utils/: align_ply_z_up.py  downsample.py  extract_pose_from_slam.py  prepare_o3d_input.py
src/re_scan/: README.md
src/re_scan/alignment/: fiducial.py  icp.py  main.py  register.py  utils.py
src/re_scan/utils/: merge_data.py
src/segmentation_and_scene_graph/: README.md  run.sh
src/segmentation_and_scene_graph/openmask3d/: inference.py  visualise_masks.py
src/segmentation_and_scene_graph/scene_graph/: generate_scene_graph.py  update_scene_graph.py
src/segmentation_and_scene_graph/utils/: prepare_om3_input.py
